title learning rate

--- a/COMP-SCI-3315/assignment-4/Animal_Classification-learning-rate.ipynb
+++ b/COMP-SCI-3315/assignment-4/Animal_Classification-learning-rate.ipynb
@@ -6,9 +6,9 @@
     "id": "BONXLLRegH70"
    },
    "source": [
-    "# **Changing Optimisation Function**\n",
+    "# **Changing Learning Rate**\n",
     "\n",
-    "From the previous model, we have changed the Optimisation function to RAdam\n",
+    "From the previous model, we have changed the learning rate to 0.0001\n",
     "\n",
     "Validation Loss: 3.705\n",
     "Validation Accuracy: 45.21%\n",
